tests/reference/ast_new-class_def1-fe69291.stderr
syntax error: Token ':' is unexpected here
  --> tests/parser/class_def1.py:25:29
   |
25 |         for item in iterable:
   |                             ^ 
